--- a/python/league_ranking.ipynb
+++ b/python/league_ranking.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Return the standings, sorted by points and team names. This function separates the sorting logic from the rest of the system, making it flexible for changes (if sorting rules change)."
+    "Return the standings, sorted by points and team names. This function separates the sorting logic from the rest of the system, making it flexible for changes (if sorting rules change). Sort the teams first by their points in descending order, and if two teams have the same points, sort them by their names in alphabetical order."
    ]
   },
   {
